<resources>
    <string name="app_name">BriefingAboutIt</string>
    <string name="enter_email_label">E-mail:</string>
    <string name="enter_password_label">Password:</string>
    <string name="reenter_password_label">Reenter password:</string>
    <string name="log_in_button">Log In</string>
    <string name="register_registration_button">Register</string>
    <string name="register_button">Register Here</string>
    <string name="back_to_login_button">Log In Here</string>
    <string name="register_string">No account?</string>
    <string name="existing_account">Already own an account?</string>
    <string name="enter_email_hint">account@email.com</string>
    <string name="enter_password_hint">Password123</string>
    <string name="title_activity_article_detail_host">ArticleDetailHostActivity</string>
    <string name="title_article_list">Articles</string>
    <string name="title_article_detail">Article Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Pick a title</string>
    <string name="second_fragment_label">Take notes or write article</string>
    <string name="third_fragment_label">Pick pictures to blur faces</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="log_out">Log out</string>
    <string name="create_article">Create article</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_create_article">CreateArticle</string>
    <string name="goToMainActivity">Return to main activity</string>
    <string name="goToArticleText">Go to article text edit</string>
    <string name="goToPicturesPick">Picture picker next</string>
    <string name="returnToTitleEdit">Return to title edit</string>
    <string name="submitForm">Submit Form</string>
    <string name="returnToEditText">Return to edit article</string>
    <string name="title">Title:</string>
    <string name="my_title_hint">my title</string>
    <string name="pick_heading_size">Pick a heading size:</string>
    <string name="h1_text">Section Heading 1</string>
    <string name="h2_text">Section Heading 2</string>
    <string name="h3_text">Section Heading 3</string>
    <string name="h4_text">Section Heading 4</string>
    <string name="title_design">Title design:</string>
    <string name="image_description_text">Image description:</string>
    <string name="image_description_hint">short description</string>
    <string name="photo_picker_button_instruction">Add a new photo from gallery!</string>
    <string name="photo_picker_button_string">Select</string>
    <string name="imageViewDescription">Earlier picked image.</string>
    <string name="done_photo_naming">Done</string>
    <string name="blur_faces_tag_string">Blur faces in image?</string>
    <string name="check_blur">Blur faces in image?</string>
    <string name="delete_button">Delete</string>
    <string name="pick_other_image_button_text">Pick another image</string>
    <string name="create_article_button_instruction">Create a new article paragraph!</string>
    <string name="create_string">Create</string>
    <string name="add_subtitle_label_text">Add a Title to the Paragraph!</string>
    <string name="add_subtitle_button">Set or Remove Title</string>
    <string name="paragraph_description_label">Write a short description of the paragraph:</string>
    <string name="paragraph_text_label">Paragraph:</string>
    <string name="discard_paragraph">Discard</string>
    <string name="current_articles">Current Articles:</string>
    <string name="article_edit">Edit Article</string>
    <string name="photo_blur_menu_button">Blur faces in photos</string>
    <string name="information_blur_menu">Pick an image to blur</string>
    <string name="list_image_display">Displays an image in a list</string>
    <string name="see_blurred_picture">See the blurred picture</string>
    <string name="select_picture_to_blur">Select faces to be blurred</string>
    <string name="blurred_photo_description_label">The blurred photo:</string>
    <string name="pick_to_blur_label">Pick faces to blur:</string>

</resources>