<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditParagraphTitleFragment"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/pick_title_label"
        android:layout_width="73dp"
        android:layout_height="49dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/my_title_hint"
        android:inputType="text"
        android:textColorHint="#757575"
        app:helperText="Required"
        app:helperTextTextColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <!-- add RadioGroup which contain the many RadioButton-->

    <TextView
        android:id="@+id/pick_heading_size_label"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/pick_heading_size"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <RadioGroup
        android:id="@+id/title_heading_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pick_heading_size_label"
        android:checkedButton="@+id/radio_h1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361">

        <!-- In RadioGroup create the 1 Radio Button-->
        <!-- like this we will add some more Radio Button-->
        <RadioButton
            android:id="@+id/radio_h1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/h1_text"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_h2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/h2_text"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_h3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/h3_text"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_h4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/h4_text"
            android:textAlignment="center"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/design_label"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/title_design"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/title_design_display"
        android:layout_width="411dp"
        android:layout_height="166dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <Button
        android:id="@+id/submit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_photo_naming"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

</androidx.constraintlayout.widget.ConstraintLayout>